src/Checkbox/index.scss
// only apply top spacing to a checkbox container
// that is preceded by another checkbox container
.nds-checkbox-container ~ .nds-checkbox-container {
  padding-top: var(--space-s);
}

// condensed checkboxes get no extra top spacing;
// any extra spacing should be applied by the consumer
.nds-checkbox-container--condensed ~ .nds-checkbox-container--condensed {
  padding-top: 0;
}

// normal checkboxes get a bit of extra spacing
.nds-checkbox-container--normal ~ .nds-checkbox-container--normal {
  margin-top: var(--space-default);
}

// reset paragraph spacing in markdown labels
.nds-checkbox-label p {
  margin: 0;
  margin-block-start: 0;
  margin-block-end: 0;
}

.nds-checkbox {
  cursor: pointer;
  font-size: var(--font-size-default);

  input {
    @extend %a11y-visually-hide;
  }

  a:hover {
    text-decoration: underline;
  }
}

/**
* kind="normal|table"
*/
.nds-checkbox--normal,
.nds-checkbox--condensed,
.nds-checkbox--table {
  display: flex;
  width: fit-content;
  position: relative;
  align-items: flex-start;
  gap: var(--space-s);

  .narmi-icon-minus,
  .narmi-icon-check {
    height: rem(18px);
    width: rem(18px);
    line-height: rem(18px);
    font-size: rem(15px);
    background-color: white;
    font-weight: bold;
    border-radius: rem(3px);
    border: 1px solid var(--color-lightGrey);
    color: white;
    text-align: center;
    box-sizing: content-box;
    // - prevent this flex item from shrinking to checkmark width
    // - visually align checkbox icon baseline with label baseline
    flex-shrink: 0;

    &.error {
      border: 1px solid var(--color-errorDark);
    }
  }

  // hover
  .narmi-icon-minus:hover,
  .narmi-icon-check:hover {
    border-color: var(--theme-primary);
  }

  // disabled states
  &.nds-checkbox--disabled {
    cursor: unset;

    .narmi-icon-minus,
    .narmi-icon-check,
    .narmi-icon-minus:hover,
    .narmi-icon-check:hover {
      pointer-events: none;
      background-color: var(--bgColor-smokeGrey);
      border-color: var(--font-color-hint);

      &::before {
        color: transparent;
      }
    }

    &.nds-checkbox--checked {
      .narmi-icon-minus,
      .narmi-icon-check,
      .narmi-icon-minus:hover,
      .narmi-icon-check:hover {
        background-color: var(--color-mediumGrey);
        border-color: var(--color-mediumGrey);

        &::before {
          color: var(--color-white);
        }
      }
    }
  }

  // focused
  &.nds-checkbox--focused .narmi-icon-minus,
  &.nds-checkbox--focused .narmi-icon-check {
    border-color: var(--theme-primary);
    outline: 3px solid RGBA(var(--theme-rgb-primary), var(--alpha-10));
  }

  // checked
  &.nds-checkbox--checked {
    .narmi-icon-minus,
    .narmi-icon-check {
      background-color: var(--theme-primary);
      border-color: var(--theme-primary);

      &:after {
        display: block;
      }
    }
  }
}

/**
* kind="table
*/
.nds-checkbox--table {
  .narmi-icon-minus,
  .narmi-icon-check {
    height: var(--font-size-default);
    width: var(--font-size-default);
    line-height: var(--font-size-default);
    font-size: var(--font-size-default);
  }

  .nds-checkbox-label {
    // hide the label for this variant of checkbox,
    // but make it available to screen readers
    @extend %a11y-visually-hide;
  }

  // hover state
  .narmi-icon-minus:hover,
  .narmi-icon-check:hover {
    outline: unset !important; // override focus indicator when hovering

    &::after {
      content: " ";
      border-radius: 50%;
      height: rem(32px);
      width: rem(32px);
      position: absolute;
      top: 50%;
      left: 50%;
      transform: translate(-50%, -50%);
      background-color: rgba(var(--theme-rgb-primary), var(--alpha-10));
      z-index: -1; // make the circle appear behind the checkbox
    }
  }
}

/**
* kind="card"
*/
.nds-checkbox--card {
  position: relative;
  display: flex;
  flex-direction: row-reverse; // check should render on the right side
  align-items: center;
  justify-content: space-between;
  background-color: var(--color-white);
  color: var(--color-primary);
  font-weight: var(--font-weight-bold) !important;

  .nds-checkbox-label {
    flex-grow: 1;
  }

  .narmi-icon-check {
    display: none;
  }

  &:hover,
  &.nds-checkbox--checked,
  &.nds-checkbox--focused {
    border-color: var(--theme-primary);
  }

  &.nds-checkbox--checked {
    background-color: RGBA(var(--theme-rgb-primary), var(--alpha-5));
  }

  &.nds-checkbox--checked {
    .narmi-icon-check {
      display: inline-flex;
      align-items: center;
      justify-content: center;
      width: var(--space-default);
      height: var(--space-default);
      border-radius: 100%;
      background-color: var(--theme-primary);
      color: var(--color-white);
      font-size: var(--font-size-s);
      font-weight: var(--font-weight-default);
    }
  }

  &.nds-checkbox--disabled {
    border-color: var(--theme-primary); // the shim will compensate
    background-color: var(--bgColor-smokeGrey);
  }
}

